--- a/package.json
+++ b/package.json
@@ -19,5 +19,18 @@
         "concurrently": "^4.1.2",
         "cors": "^2.8.5",
         "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "babel": "^6.23.0",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^8.0.6",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "css-loader": "^3.2.0",
+        "node-sass": "^4.12.0",
+        "sass-loader": "^8.0.0",
+        "style-loader": "^1.0.0",
+        "webpack": "^4.40.2",
+        "webpack-cli": "^3.3.9"
     }
 }
